--- a/Bio/style.css
+++ b/Bio/style.css
@@ -1,170 +1,404 @@
 * {
-    background-color: rgb(5, 5, 5);
-  }
-  .html {
-    width: 100%;
-    max-height: 1920px;
-    overflow: hidden;
-  }
-  .text {
-    font-size: 48px;
-    color: aliceblue;
-    font-family: "Courier New", Courier, monospace;
-    position: absolute;
-    top: 69px;
-    left: 50%;
-    transform: translateX(-50%);
-    text-transform: uppercase;
-    font-weight: 300;
-    cursor: pointer;
-  }
-  .bio {
-    width: 800px;
-    box-shadow: inset 0 0 10px 1px white;
-    height: 600px;
-    position: absolute;
-    top: 199px;
-    left: 50%;
-    transform: translateX(-50%);
-    border: 1px solid aliceblue;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .bioText  {
-    font-family: "Courier New", Courier, monospace;
-    width: 690px;
-    background: none;
-    font-size: 19px;
-    color: aliceblue;
-    text-align: center;
-  }
-  .contactBio {
-    width: 400px;
-    height: 69px;
-    position: absolute;
-    bottom: 50px;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    text-align: center;
-  }
+  background-color: rgb(5, 5, 5);
+}
+.html {
+  width: 100%;
+  max-height: 1920px;
+  overflow: hidden;
+}
+.text {
+  font-size: 48px;
+  color: aliceblue;
+  font-family: "Courier New", Courier, monospace;
+  position: absolute;
+  top: 69px;
+  left: 50%;
+  transform: translateX(-50%);
+  text-transform: uppercase;
+  font-weight: 300;
+  cursor: pointer;
+}
+.bio {
+  width: 800px;
+  box-shadow: inset 0 0 10px 1px white;
+  height: 600px;
+  position: absolute;
+  top: 199px;
+  left: 50%;
+  transform: translateX(-50%);
+  border: 1px solid aliceblue;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-  
-  .fa-envelope {
-    width: 200px;
-    height: 69px;
-    color: aliceblue;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    opacity: .5;
+.bioText {
+  font-family: "Courier New", Courier, monospace;
+  width: 690px;
+  background: none;
+  font-size: 19px;
+  color: aliceblue;
+  text-align: center;
+}
+.contactBio {
+  width: 400px;
+  height: 69px;
+  position: absolute;
+  bottom: 50px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+}
+.menuBar {
+  width: 100px;
+  height: 400px;
+  position: fixed;
+  left: -50px;
+  top: 25vh;
+  border: 1px white solid;
+  display: flex;
+  flex-direction: column;
+  opacity: 0.3;
+}
+.menuBar.moved {
+  left: 0;
+  top: 25vh;
+  transition: all 10s ease-in-out forwards;
+  position: fixed;
+  border: 1px white solid;
+  opacity: 0.99;
+  -webkit-animation: bounce-in-left 1.1s both;
+  animation: bounce-in-left 1.1s both;
+}
+.homeBar {
+  width: 100px;
+  height: 100px;
+  background: url("/assets/HomeBar.png");
+  background-position: center;
+  background-size: cover;
+}
+.galleryBar {
+  width: 100px;
+  height: 100px;
+  background: url(/assets/galleryBar.png);
+  background-position: center;
+  background-size: cover;
+}
+.bioBar {
+  width: 100px;
+  height: 100px;
+  background: url(/assets/BioBar.png);
+  background-position: center;
+  background-size: cover;
+}
+.offersBar {
+  width: 100px;
+  height: 100px;
+  background: url(/assets/OfferBar.png);
+  background-position: center;
+  background-size: cover;
+}
+.orderBar {
+  width: 100px;
+  height: 100px;
+  background: url(/assets/orderBar.png);
+  background-position: center;
+  background-size: cover;
+}
+
+.fa-envelope {
+  width: 200px;
+  height: 69px;
+  color: aliceblue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  opacity: 0.5;
+}
+.fa-instagram {
+  width: 200px;
+  height: 69px;
+  color: aliceblue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  opacity: 0.6;
+}
+.fa-phone {
+  width: 200px;
+  height: 69px;
+  color: aliceblue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  opacity: 0.5;
+}
+.fa-phone:hover,
+.fa-envelope:hover,
+.fa-instagram:hover {
+  opacity: 1;
+}
+#contact-form {
+  display: flex;
+  position: absolute;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 50px;
+  z-index: 0;
+  top: 120px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: black;
+  border: 1px solid white;
+  border-radius: 10px;
+  box-shadow: inset 0 0 10px 1px whitesmoke;
+  width: 1000px;
+  height: 700px;
+  display: none;
+}
+
+label {
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+#email,
+#name {
+  width: 450px;
+}
+#message {
+  width: 900px;
+  height: 369px;
+}
+input,
+textarea {
+  padding: 10px;
+  margin-bottom: 20px;
+  border: none;
+  border-radius: 5px;
+  background: #fff;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+.paper {
+  display: flex;
+  flex-direction: column;
+}
+button {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #0069d9;
+}
+
+#exit-button {
+  margin-top: 20px;
+  padding: 10px 20px;
+  background-color: #dc3545;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+#exit-button:hover {
+  background-color: #c82333;
+}
+.menuNav {
+  position: fixed;
+  left: 0;
+  top: 5vh;
+  width: 200px;
+  height: 800px;
+  background: none;
+}
+.galleryBar:hover,
+.homeBar:hover,
+.offersBar:hover,
+.orderBar:hover,
+.bioBar:hover {
+  transform: scale(1.2);
+  transition: all .4s ease-in;
+}
+.menuBar {
+  width: 100px;
+  height: 400px;
+  position: fixed;
+  left: -50px;
+  top: 25vh;
+  border: 1px white solid;
+  display: flex;
+  flex-direction: column;
+  opacity: 0.3;
+}
+.menuBar.moved {
+  left: 0;
+  transition: all 10s ease-in-out forwards;
+  position: fixed;
+  top: 25vh;
+  border: 1px white solid;
+  opacity: 0.99;
+  -webkit-animation: bounce-in-left 1.1s both;
+  animation: bounce-in-left 1.1s both;
+}
+.homeBar {
+  width: 100px;
+  height: 100px;
+  background: url("/assets/HomeBar.png");
+  background-position: center;
+  background-size: cover;
+}
+.galleryBar {
+  width: 100px;
+  height: 100px;
+  background: url(/assets/galleryBar.png);
+  background-position: center;
+  background-size: cover;
+}
+.bioBar {
+  width: 100px;
+  height: 100px;
+  background: url(/assets/BioBar.png);
+  background-position: center;
+  background-size: cover;
+}
+.offersBar {
+  width: 100px;
+  height: 100px;
+  background: url(/assets/OfferBar.png);
+  background-position: center;
+  background-size: cover;
+}
+.orderBar {
+  width: 100px;
+  height: 100px;
+  background: url(/assets/orderBar.png);
+  background-position: center;
+  background-size: cover;
+}
+.footer {
+  font-size: 24px;
+  font-family: "Courier New", Courier, monospace;
+  color: aliceblue;
+  position: absolute;
+  bottom: 1px;
+  left: 50%;
+  transform: translateX(-50%);
+  text-transform: uppercase;
+  font-weight: 300;
+}
+
+@-webkit-keyframes bounce-in-left {
+  0% {
+    -webkit-transform: translateX(-600px);
+    transform: translateX(-600px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+    opacity: 0;
   }
-  .fa-instagram {
-    width: 200px;
-    height: 69px;
-    color: aliceblue;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    opacity: .6;
-  }
-  .fa-phone {
-    width: 200px;
-    height: 69px;
-    color: aliceblue;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    opacity: .5;
-  }
-  .fa-phone:hover,.fa-envelope:hover,.fa-instagram:hover {
+  38% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
     opacity: 1;
   }
-  #contact-form {
-    display: flex;
-    position: absolute;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 50px;
-    z-index: 0;
-    top: 120px;
-    left: 50%;
-    transform: translateX(-50%);
-    background: black;
-    border: 1px solid white;
-    border-radius: 10px;
-    box-shadow: inset 0 0 10px 1px whitesmoke;
-    width: 1000px;
-    height: 700px;
-    display: none;
+  55% {
+    -webkit-transform: translateX(-68px);
+    transform: translateX(-68px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
   }
-  
-  label {
-    font-weight: bold;
-    margin-bottom: 10px;
+  72% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
   }
-  #email, #name {
-    width: 450px;
+  81% {
+    -webkit-transform: translateX(-28px);
+    transform: translateX(-28px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
   }
-  #message {
-    width: 900px;
-    height: 369px;
+  90% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
   }
-  input,
-  textarea {
-    padding: 10px;
-    margin-bottom: 20px;
-    border: none;
-    border-radius: 5px;
-    background: #fff;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  95% {
+    -webkit-transform: translateX(-8px);
+    transform: translateX(-8px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
   }
-  .paper {
-    display: flex;
-    flex-direction: column;
-    
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
   }
-  button {
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+}
+@keyframes bounce-in-left {
+  0% {
+    -webkit-transform: translateX(-600px);
+    transform: translateX(-600px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+    opacity: 0;
   }
-  
-  button:hover {
-    background-color: #0069d9;
+  38% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+    opacity: 1;
   }
-  
-  #exit-button {
-    margin-top: 20px;
-    padding: 10px 20px;
-    background-color: #dc3545;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+  55% {
+    -webkit-transform: translateX(-68px);
+    transform: translateX(-68px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
   }
-  
-  #exit-button:hover {
-    background-color: #c82333;
+  72% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
   }
-  .footer {
-    font-size: 24px;
-    font-family: "Courier New", Courier, monospace;
-    color: aliceblue;
-    position: absolute;
-    bottom: 1px;
-    left: 50%;
-    transform: translateX(-50%);
-    text-transform: uppercase;
-    font-weight: 300;
+  81% {
+    -webkit-transform: translateX(-28px);
+    transform: translateX(-28px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
   }
+  90% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+  95% {
+    -webkit-transform: translateX(-8px);
+    transform: translateX(-8px);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+  }
+}
